# -----------------------------------------------------------------------------
#
# Samples
#
# -----------------------------------------------------------------------------

add_subdirectory(${SAMPLES_PATH}/android)
add_subdirectory(${SAMPLES_PATH}/desktop)

# -----------------------------------------------------------------------------
